started my html and css code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
+        <title>Word Duel Game</title>
 
     </head>
     <body>
-        
+        <h1 class="mhead">Word Game</h1>
+        <p>Select your player to start the game!</p>
+        <button class="playerb">Player 1</button>
+        <button class="playerb">Player 2</button><br>
+        <button>Game Start</button>
     </body>
 </html>
