started my JS code by getting the elements and adding eventListeners

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <body>
         <h1 class="mhead">Word Game</h1>
         <p>Select your player to start the game!</p>
-        <button class="playerb">Player 1</button>
-        <button class="playerb">Player 2</button><br>
-        <button>Game Start</button>
+        <button id="player1Btn" style="margin-right: 10px;"title="Lexa"class="playerb">Player 1</button>
+        <button id="player2Btn"title="Syntax"class="playerb">Player 2</button><br>
+        <p id="message"></p>
+        <button id="startBtn" class="startb" disabled>Play Now!</button>
     </body>
 </html>
