--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <title>Word Duel Game</title>
@@ -20,5 +20,9 @@
             <input  class="inputField"style="display: none;" id="inputField" type="text" placeholder="Type your Word Here.">
             <p id="enterHint" class="hint-text" style="display: none;">Press Enter to submit your word</p>
         </div>
+        <button id="viewHighScoresBtn">View High Scores</button>
+        <div id="highScoresSection" style="display: none; white-space: pre-wrap; margin-top: 10px;"></div>
+
+
     </body>
 </html>
